[REF][SLOT-103]: Implementación de cambios sugeridos